--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -48,6 +48,11 @@
     "title": "💼 Erfahrung",
     "subtitle": "Meine professionelle Entwicklungsreise",
     "items": {
+      "discordIdSpace": {
+        "title": "Discord ID Space",
+        "company": "Discord Benutzer-Info Platform",
+        "description": "Plattform zum Abrufen von Discord-Benutzerinformationen über Benutzer-ID. Bietet Benutzerprofile, Avatar-Details und grundlegende Discord-Datenvisualisierung."
+      },
       "animeEly": {
         "title": "AnimeEly Platform",
         "company": "Full Stack Web Entwicklung",
