--- a/public/locales/tr/common.json
+++ b/public/locales/tr/common.json
@@ -49,7 +49,7 @@
     "subtitle": "Profesyonel gelişim yolculuğum",
     "items": {
       "discordIdSpace": {
-        "title": "Discord ID Space",
+        "title": "discordid.space",
         "company": "Discord Kullanıcı Bilgi Platformu",
         "description": "Discord kullanıcı ID'si ile kullanıcı bilgilerini çeken platform. Kullanıcı profillerini, avatar bilgilerini ve temel Discord verilerini görüntüleme imkanı sağlar."
       },
